--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <title>Portfolio with Bootstrap</title>
 </head>
 <body>
-    <script src="./bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+              <!-- <a class="navbar-brand " href="#">Welcome</a> -->
+              <a class="navbar-toggler" data-bs-toggle="collapse" aria-expanded="false" href="#" >Welcome</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav mx-auto">
+                  <a class="nav-link text-dark font-weight-bold"  href="#">Portfolio</a>
+                  <a class="nav-link text-dark font-weight-bold" href="#">About</a>
+                  <a class="nav-link text-dark font-weight-bold" href="#">Contact</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+    </header>
+    <section>
+
+    </section>
+    <script src="./bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
