--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.min.css">
-    <title>Portfolio with Bootstrap</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">  
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<title>Portfolio with Bootstrap</title>
 </head>
 <body>
     <header>
@@ -26,9 +31,22 @@
             </div>
           </nav>
     </header>
-    <section>
-
-    </section>
+    <div class="container mx-auto p-5" style="width:100% ; height:600px;">
+        <div class="container mx-auto text-center" style="width: 50%;">
+        <h1 style="color: #172b4d;">Hey there.I'm Rida</h1>
+          <h2 style="color: #36B37E;">I am a software developer</h2>
+          <p class="p-3" style="color: #172B4D;"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+            don’t hestiate to contact me.</p>
+            
+                <ul class="list-inline " style="font-size: 24px;">
+                    <li  class="list-inline-item p-2"><a href="#"><span class="fa fa-angellist text-dark" style="color: #172B4D;"></span></a></li>
+                    <li  class="list-inline-item p-2"><a href="#"><span class="fa fa-medium text-dark" style="color: #172B4D;"></span></a></li>
+                    <li  class="list-inline-item p-2"><a href="#"><span class="fa fa-github text-dark" style="color: #172B4D;"></span></a></li>
+                    <li  class="list-inline-item p-2"><a href="#"><span class="fa fa-linkedin text-dark" style="color: #172B4D;"></span></a></li>
+                </ul>
+            
+        </div>
+    </div>
     <script src="./bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
