Add the second row of the cards list

--- a/index.html
+++ b/index.html
@@ -120,6 +120,125 @@
     </section>
     <section class="container">
       <h2 class="text-center p-3">My Recent Works</h2>
+      <div class="row" style="margin-bottom: 20px">
+        <div class="col-4">
+          <div class="card" style="width: 369px">
+            <div
+              class="card-img-top"
+              style="background-color: #e5e5e5; height: 252px"
+            ></div>
+            <div class="card-body text-center">
+              <h2 class="card-title">Multi-Post Stories Gain+Glory</h2>
+
+              <ul class="list-inline">
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  Ruby on rails
+                </li>
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  CSS
+                </li>
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  Javascript
+                </li>
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  HTML
+                </li>
+              </ul>
+              <a href="#" class="btn btn-success">See project</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width: 369px">
+            <div
+              class="card-img-top"
+              style="background-color: #e5e5e5; height: 252px"
+            ></div>
+            <div class="card-body text-center">
+              <h2 class="card-title">Multi-Post Stories Gain+Glory</h2>
+
+              <ul class="list-inline">
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  Ruby on rails
+                </li>
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  CSS
+                </li>
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  Javascript
+                </li>
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  HTML
+                </li>
+              </ul>
+              <a href="#" class="btn btn-success">See project</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width: 369px">
+            <div
+              class="card-img-top"
+              style="background-color: #e5e5e5; height: 252px"
+            ></div>
+            <div class="card-body text-center">
+              <h2 class="card-title">Multi-Post Stories Gain+Glory</h2>
+
+              <ul class="list-inline">
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  Ruby on rails
+                </li>
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  CSS
+                </li>
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  Javascript
+                </li>
+                <li
+                  class="list-inline-item badge text-dark p-2"
+                  style="background: #ebf0ee"
+                >
+                  HTML
+                </li>
+              </ul>
+              <a href="#" class="btn btn-success">See project</a>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col-4">
           <div class="card" style="width: 369px">
@@ -156,7 +275,7 @@
                   HTML
                 </li>
               </ul>
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success">See project</a>
             </div>
           </div>
         </div>
@@ -195,7 +314,7 @@
                   HTML
                 </li>
               </ul>
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success">See project</a>
             </div>
           </div>
         </div>
@@ -234,7 +353,7 @@
                   HTML
                 </li>
               </ul>
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success">See project</a>
             </div>
           </div>
         </div>
