--- a/index.html
+++ b/index.html
@@ -359,6 +359,20 @@
         </div>
       </div>
     </section>
+    <section class="container mx-auto p-5" style="width: 100%; height: 600px">
+        <div class="container mx-auto text-center" style="width: 50%">
+          <h1 class="m-2 p-3" style="color: #172b4d">About Me</h1>
+          
+          <p class="p-3" style="color: #172b4d">
+            I can help you build a product , feature or website Look through some of my work and experience! 
+            If you like what you see and have a project you need coded, 
+            don’t hestiate to contact me.
+          </p>
+  
+          <a href="#" class="btn btn-success">See project</a>
+        </div>
+      </section>
+     
     <script src="./bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
