--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 
        </div>
     </section>
-    <section class="container  mt-5 mb-5 d-flex justify-content-end">
+    <section class="container  mt-5 mb-5 d-flex justify-content-end " style="margin-bottom: 70px;">
       <p style="font-family: Inter; font-style: normal; font-weight: bold; font-size: 30px; color: #172b4d" class="mt-5 col-5">I'm always interested in hearing about new projects, 
         so if you'd like to chat please get in touch.</p>
       <form action="#nowhere" style="width: 50%; height: auto;">
@@ -527,8 +527,8 @@
       </form>
       
     </section>
-    <section class="container mx-auto d-flex justify-content-center mt-5">
-            <ul class="list-inline" style="font-size: 24px; margin-top: 70px; border-top:1px solid rgba(0, 0, 0, 0.1);">
+    <section class="container mx-auto d-flex justify-content-center mt-5 border-top">
+            <ul class="list-inline" style="font-size: 24px;  ">
           <li class="list-inline-item p-2">
             <a href="#"
               ><span
